<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_host_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/all_host"
        app:helperText="@string/all_example_url"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="custom"
        app:startIconDrawable="@drawable/ic_dns_24px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeActionLabel="@string/all_next_step"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>