...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_diagram" />

    <Button
        android:id="@+id/button_lets_go"
        style="@style/AppOutlineButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Lets go!"
        app:layout_constraintBottom_toBottomOf="parent"
...
